fix the inertial scroll on mobile

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 /* prevent inertial scroll on mobile */
 html, body {
-    /* position: fixed; */
+    position: fixed;
 }
 
 /* section {
